auth.proxy/kubernetes/service.auth.proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy
spec:
  type: NodePort
  selector:
    name: auth-proxy
  ports:
    - port: 3000
