auth.proxy/kubernetes/ingress.auth.proxy.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  backend:
    serviceName: auth-proxy
    servicePort: 3000
